# boost-compute

./: .gitignore  .gitmodules  .license.py  CMakeLists.txt  README.md  hello.cpp  transform.cpp
cmake/Modules/: MacroUtilities.cmake
source/: device.cpp  device.hpp  globals.hpp
